[package]
name = "dm-tracer-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
dm-tracer-common = { path = "../dm-tracer-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "dm-tracer"
path = "src/main.rs"
